// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot testing MarketCardContent Component renders correctly only statisticList 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: calc(100% + 8px);
  margin-top: -8px;
  width: calc(100% + 8px);
  margin-left: -8px;
  font-size: 0.8em;
  padding: 1em;
  margin-top: auto;
}

.emotion-0>.MuiGrid-item {
  padding-top: 8px;
}

.emotion-0>.MuiGrid-item {
  padding-left: 8px;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: calc(100% + 24px);
  margin-top: -24px;
  width: calc(100% + 24px);
  margin-left: -24px;
  -webkit-flex-basis: calc(100% + 24px);
  -ms-flex-preferred-size: calc(100% + 24px);
  flex-basis: calc(100% + 24px);
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: calc(100% + 24px);
}

.emotion-1>.MuiGrid-item {
  padding-top: 24px;
}

.emotion-1>.MuiGrid-item {
  padding-left: 24px;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 50%;
}

.emotion-4 {
  color: rgba(29, 34, 39, 0.65);
  padding: 0.2em;
}

.emotion-4.hasIcon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4.hasIcon>* {
  margin-left: 0.2em;
}

.emotion-5 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 2.125rem;
  line-height: 1.235;
  letter-spacing: 0.00735em;
}

.emotion-5.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
}

.emotion-6 {
  color: rgba(42, 184, 0, 1);
  padding: 0.2em;
}

.emotion-6.hasIcon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6.hasIcon>* {
  margin-left: 0.2em;
}

.emotion-7 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 3rem;
  line-height: 1.167;
  letter-spacing: 0em;
}

.emotion-7.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
}

.emotion-11 {
  padding: 0.2em;
}

.emotion-11.hasIcon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-11.hasIcon>* {
  margin-left: 0.2em;
}

<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 emotion-0"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 emotion-1"
  />
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 emotion-1"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 emotion-3"
    >
      <div
        className="hasIcon emotion-4"
      >
        <h4
          className="MuiTypography-root MuiTypography-h4  emotion-5"
          lines={3}
        >
          WEEKLY
           
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
            />
          </svg>
        </h4>
      </div>
      <div
        className="emotion-6"
      >
        <h3
          className="MuiTypography-root MuiTypography-h3  emotion-7"
          lines={3}
        >
          Yes
           
          95
        </h3>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 emotion-3"
    >
      <div
        className=" emotion-4"
      >
        <h4
          className="MuiTypography-root MuiTypography-h4  emotion-5"
          lines={3}
        >
          VOLUME
           
        </h4>
      </div>
      <div
        className="emotion-11"
      >
        <h3
          className="MuiTypography-root MuiTypography-h3  emotion-7"
          lines={3}
        >
           
          5
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot testing MarketCardContent Component renders correctly only tokenList 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: calc(100% + 8px);
  margin-top: -8px;
  width: calc(100% + 8px);
  margin-left: -8px;
  font-size: 0.8em;
  padding: 1em;
  margin-top: auto;
}

.emotion-0>.MuiGrid-item {
  padding-top: 8px;
}

.emotion-0>.MuiGrid-item {
  padding-left: 8px;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: calc(100% + 24px);
  margin-top: -24px;
  width: calc(100% + 24px);
  margin-left: -24px;
  -webkit-flex-basis: calc(100% + 24px);
  -ms-flex-preferred-size: calc(100% + 24px);
  flex-basis: calc(100% + 24px);
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: calc(100% + 24px);
}

.emotion-1>.MuiGrid-item {
  padding-top: 24px;
}

.emotion-1>.MuiGrid-item {
  padding-left: 24px;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 50%;
}

.emotion-3 {
  color: rgba(29, 34, 39, 0.65);
  padding: 0.2em;
}

.emotion-3.hasIcon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3.hasIcon>* {
  margin-left: 0.2em;
}

.emotion-4 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 2.125rem;
  line-height: 1.235;
  letter-spacing: 0.00735em;
}

.emotion-4.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
}

.emotion-5 {
  color: rgba(42, 184, 0, 1);
  padding: 0.2em;
}

.emotion-5.hasIcon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5.hasIcon>* {
  margin-left: 0.2em;
}

.emotion-6 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 3rem;
  line-height: 1.167;
  letter-spacing: 0em;
}

.emotion-6.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
}

.emotion-10 {
  color: rgba(255, 57, 57, 1);
  padding: 0.2em;
}

.emotion-10.hasIcon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10.hasIcon>* {
  margin-left: 0.2em;
}

<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 emotion-0"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 emotion-1"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 emotion-2"
    >
      <div
        className="emotion-3"
      >
        <h4
          className="MuiTypography-root MuiTypography-h4  emotion-4"
          lines={3}
        >
          Yes
        </h4>
      </div>
      <div
        className="emotion-5"
      >
        <h3
          className="MuiTypography-root MuiTypography-h3  emotion-6"
          lines={3}
        >
          14
          %
        </h3>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 emotion-2"
    >
      <div
        className="emotion-3"
      >
        <h4
          className="MuiTypography-root MuiTypography-h4  emotion-4"
          lines={3}
        >
          No
        </h4>
      </div>
      <div
        className="emotion-10"
      >
        <h3
          className="MuiTypography-root MuiTypography-h3  emotion-6"
          lines={3}
        >
          5
          %
        </h3>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 emotion-1"
  />
</div>
`;

exports[`Snapshot testing MarketCardContent Component renders correctly with Props 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: calc(100% + 8px);
  margin-top: -8px;
  width: calc(100% + 8px);
  margin-left: -8px;
  font-size: 0.8em;
  padding: 1em;
  margin-top: auto;
}

.emotion-0>.MuiGrid-item {
  padding-top: 8px;
}

.emotion-0>.MuiGrid-item {
  padding-left: 8px;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: calc(100% + 24px);
  margin-top: -24px;
  width: calc(100% + 24px);
  margin-left: -24px;
  -webkit-flex-basis: calc(100% + 24px);
  -ms-flex-preferred-size: calc(100% + 24px);
  flex-basis: calc(100% + 24px);
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: calc(100% + 24px);
}

.emotion-1>.MuiGrid-item {
  padding-top: 24px;
}

.emotion-1>.MuiGrid-item {
  padding-left: 24px;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 50%;
}

.emotion-3 {
  color: rgba(29, 34, 39, 0.65);
  padding: 0.2em;
}

.emotion-3.hasIcon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3.hasIcon>* {
  margin-left: 0.2em;
}

.emotion-4 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 2.125rem;
  line-height: 1.235;
  letter-spacing: 0.00735em;
}

.emotion-4.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
}

.emotion-5 {
  color: rgba(42, 184, 0, 1);
  padding: 0.2em;
}

.emotion-5.hasIcon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5.hasIcon>* {
  margin-left: 0.2em;
}

.emotion-6 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 3rem;
  line-height: 1.167;
  letter-spacing: 0em;
}

.emotion-6.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
}

.emotion-10 {
  color: rgba(255, 57, 57, 1);
  padding: 0.2em;
}

.emotion-10.hasIcon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10.hasIcon>* {
  margin-left: 0.2em;
}

.emotion-21 {
  padding: 0.2em;
}

.emotion-21.hasIcon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-21.hasIcon>* {
  margin-left: 0.2em;
}

<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 emotion-0"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 emotion-1"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 emotion-2"
    >
      <div
        className="emotion-3"
      >
        <h4
          className="MuiTypography-root MuiTypography-h4  emotion-4"
          lines={3}
        >
          Yes
        </h4>
      </div>
      <div
        className="emotion-5"
      >
        <h3
          className="MuiTypography-root MuiTypography-h3  emotion-6"
          lines={3}
        >
          14
          %
        </h3>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 emotion-2"
    >
      <div
        className="emotion-3"
      >
        <h4
          className="MuiTypography-root MuiTypography-h4  emotion-4"
          lines={3}
        >
          No
        </h4>
      </div>
      <div
        className="emotion-10"
      >
        <h3
          className="MuiTypography-root MuiTypography-h3  emotion-6"
          lines={3}
        >
          5
          %
        </h3>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 emotion-1"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 emotion-2"
    >
      <div
        className="hasIcon emotion-3"
      >
        <h4
          className="MuiTypography-root MuiTypography-h4  emotion-4"
          lines={3}
        >
          WEEKLY
           
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
            />
          </svg>
        </h4>
      </div>
      <div
        className="emotion-5"
      >
        <h3
          className="MuiTypography-root MuiTypography-h3  emotion-6"
          lines={3}
        >
          Yes
           
          95
        </h3>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 emotion-2"
    >
      <div
        className=" emotion-3"
      >
        <h4
          className="MuiTypography-root MuiTypography-h4  emotion-4"
          lines={3}
        >
          VOLUME
           
        </h4>
      </div>
      <div
        className="emotion-21"
      >
        <h3
          className="MuiTypography-root MuiTypography-h3  emotion-6"
          lines={3}
        >
           
          5
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot testing MarketCardContent Component renders correctly without Props 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: calc(100% + 8px);
  margin-top: -8px;
  width: calc(100% + 8px);
  margin-left: -8px;
  font-size: 0.8em;
  padding: 1em;
  margin-top: auto;
}

.emotion-0>.MuiGrid-item {
  padding-top: 8px;
}

.emotion-0>.MuiGrid-item {
  padding-left: 8px;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: calc(100% + 24px);
  margin-top: -24px;
  width: calc(100% + 24px);
  margin-left: -24px;
  -webkit-flex-basis: calc(100% + 24px);
  -ms-flex-preferred-size: calc(100% + 24px);
  flex-basis: calc(100% + 24px);
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: calc(100% + 24px);
}

.emotion-1>.MuiGrid-item {
  padding-top: 24px;
}

.emotion-1>.MuiGrid-item {
  padding-left: 24px;
}

<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 emotion-0"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 emotion-1"
  />
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 emotion-1"
  />
</div>
`;
